cluster/config/hajimari/hajimari.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hajimari
  labels:
    app: hajimari
---
apiVersion: v1
kind: Service
metadata:
  name: hajimari
  labels:
    app: hajimari
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: hajimari
---
# Source: hajimari/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hajimari
  labels:
    app: hajimari
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hajimari
  template:
    metadata:
      labels:
        app: hajimari
    spec:
      serviceAccountName: hajimari
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: hajimari
          image: "ghcr.io/toboshii/hajimari:v0.2.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: hajimari-settings
              mountPath: /config/config.yaml
              subPath: config.yaml
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: hajimari-settings
          configMap:
            name: hajimari-settings
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hajimari
  namespace: hajimari
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.kube.home/oauth2/start?rd=https://$host$uri"
    nginx.ingress.kubernetes.io/auth-url: https://oauth.kube.home/oauth2/auth
  labels:
    app: hajimari
spec:
  tls:
  - hosts:
    - home.kube.home
  rules:
  - host: home.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hajimari
            port:
              name: http
